Fix about page spacing

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -68,7 +68,7 @@
   }
   @include gt-sm {
     flex-direction: row;
-    margin-right: 220px;
+    margin-right: 350px;
   }
   align-items: center;
   justify-content: center;
